# Low-Latency-Trading-Engine-with-Lock-Free-Event-Pipeline

./: .gitignore  CMakeLists.txt  README.md
docs/: recovery.md
include/: coordinator_event_sink.hpp  coordinator_metrics.hpp  error.hpp  exchange.hpp  journal_sink.hpp  oms.hpp  order_coordinator.hpp  recovery.hpp  wire.hpp
infra/: docker-compose.yml
services/coordination/: coordinator_event_sink.cpp  coordinator_metrics.cpp  order_coordinator.cpp
services/exchange/: exchange.cpp  main.cpp  server_main.cpp
services/oms/: oms.cpp  oms_main.cpp
services/recovery/: journal_format.cpp  journal_format.hpp  journal_replay.cpp  journal_replay.hpp  journal_sink.cpp  recovery.cpp
tests/: test_coordinator_metrics.cpp  test_exchange.cpp  test_journal_sink.cpp  test_oms.cpp  test_order_coordinator.cpp  test_recovery.cpp  test_server_integration.cpp
tools/: journal_bench.cpp  order_latency_bench.cpp
